--- a/_extensions/gongtimer/_extension.yml
+++ b/_extensions/gongtimer/_extension.yml
@@ -1,17 +1,17 @@
-name: gong
+name: gongtimer
 script: [gong.js]
 
-title: gong
+title: gongtimer
 author: Andrie de Vries
 version: 0.1.0
 quarto-required: ">=1.2.222"
 contributes:
   revealjs-plugins:
-    - name: gong
+    - name: gongtimer
       script:
         - gong.js
       config:
-        gong:
+        gongtimer:
           # // - (required) your allotted time for presentation
           allottedTime: 5
           # // - (optional) height of page/time progress bar
